--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 <body>
     <!-- 引入人物动画js -->
-    <script src="https://www.html5tricks.com/demo/html5-person-joint/js/index.js"></script>
+    <script src="https://static.yzcdn.net/yionchi-cn/index.js"></script>
     <!-- 引入不蒜子计数 -->
     <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!-- 引入旋转花瓣加载特效 -->
